apps/capra/plane/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: plane-tls
      hosts:
        - plane.prodv2.cedille.club
  rules:
    - host: plane.prodv2.cedille.club
      http:
        paths:
          - backend:
              service:
                port:
                  number: 3000
                name: plane-web
            path: /
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 8000
                name: plane-api
            path: /api
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 8000
                name: plane-api
            path: /auth
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 3000
                name: plane-live
            path: /live/
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 3000
                name: plane-space
            path: /spaces
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 3000
                name: plane-admin
            path: /god-mode
            pathType: Prefix
          - backend:
              service:
                port:
                  number: 9000
                name: plane-minio
            path: /uploads
            pathType: Prefix
